# apple-silicon-metrics

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pr-size.yml  publish.yml
docs/superpowers/specs/: 2026-07-03-apple-silicon-metrics-design.md  2026-07-03-asmon-design.md  2026-07-03-pr-package-size-comment-design.md
examples/: demo.ts
scripts/: pkg-size.test.ts
src/: dto.rs  lib.rs  membw.rs  thermal.rs  worker.rs
ts/: binding.ts  cli.ts  errors.ts  index.test.ts  index.ts  integration.test.ts  pkg-size.ts  types.ts
