[package]
name = "apple-silicon-metrics"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Native N-API bindings exposing Apple Silicon hardware metrics via the macmon crate"
repository = "https://github.com/levibuzolic/apple-silicon-metrics"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
# Pinned to a git rev: fan RPM metrics (Metrics.fans) landed on main after the
# 0.7.0 crates.io release and are not in any published version. Revisit when a
# crate release includes fans.
macmon = { git = "https://github.com/vladkens/macmon.git", rev = "337350e18a46e41a060c6c3f9d75793568e16873" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
